--- a/src/app/components/models/models-list/models-list.component.html
+++ b/src/app/components/models/models-list/models-list.component.html
@@ -1,64 +1,67 @@
 <div class="container-fluid">
-  <div class="row">
-    <h3><i class="bi bi-motherboard"></i> Models</h3>
-    <table class="table table-striped table-hover">
-      <thead>
-        <tr>
-          <th scope="col">Name</th>
-          <th scope="col">Dimensions</th>
-          <th scope="col">Textures</th>
-          <th scope="col">Type</th>
-          <th scope="col">Category</th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr
-          *ngFor="
-            let model of ModelsList
-              | paginate
-                : {
-                    id: 'modelListPagination',
-                    itemsPerPage: 5,
-                    currentPage: modelListPage
-                  }
-          ">
-          <td>
-            {{ model.name }}
-            <p class="fs-7 fw-lighter deviceid">{{ model._id }}</p>
-          </td>
-          <td>({{ model.dimension.width + ', ' + model.dimension.height + ', ' + model.dimension.depth }})</td>
-          <td style="font-size: small">
-            <a href="{{ model.texture.front }}">front</a>, <a href="{{ model.texture.back }}">back</a>,
-            <a href="{{ model.texture.side }}">side</a>, <a href="{{ model.texture.top }}">top</a>,
-            <a href="{{ model.texture.botom }}">botom</a>
-          </td>
-          <td>{{ model.type }}</td>
-          <td>{{ model.category }}</td>
-          <td>
-            <div class="btn-group float-md-end" role="group" aria-label="model-operations">
-              <button
-                type="button"
-                class="btn btn-success btn-sm move-right"
-                id="edit-device"
-                (click)="EditModel(model)">
-                <i class="bi bi-pen"></i>
-              </button>
-              <button type="button" id="delete-device" class="btn btn-danger btn-sm" (click)="DeleteModel(model._id)">
-                <i class="bi bi-trash"></i>
-              </button>
-              <button type="button" id="clone-device" class="btn btn-info btn-sm" (click)="CloneModel(model._id)">
-                <i class="bi bi-copy"></i>
-              </button>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <button type="button" class="btn btn-success btn-sm move-right mb-3" (click)="AddModel()">
+  <h3><i class="bi bi-motherboard"></i> Models</h3>
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Dimensions</th>
+        <th scope="col">Textures</th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr
+        *ngFor="
+          let model of ModelsList
+            | paginate
+              : {
+                  id: 'modelListPagination',
+                  itemsPerPage: 5,
+                  currentPage: modelListPage,
+                }
+        ">
+        <td>
+          {{ model.name }}
+          <p class="fs-7 fw-lighter deviceid">{{ model._id }}</p>
+        </td>
+        <td>
+          ({{ model.dimension }}
+          {{ model.dimension.width + ', ' + model.dimension.height + ', ' + model.dimension.depth }})
+        </td>
+        <td style="font-size: small">
+          <a href="{{ model.texture.front }}">front</a>, <a href="{{ model.texture.back }}">back</a>,
+          <a href="{{ model.texture.side }}">side</a>, <a href="{{ model.texture.top }}">top</a>,
+          <a href="{{ model.texture.bottom }}">botom</a>
+        </td>
+        <td>
+          <div class="btn-group" role="group" aria-label="model-operations">
+            <button type="button" class="btn btn-success btn-sm move-right" id="edit-device" (click)="EditModel(model)">
+              <i class="bi bi-pen"></i>
+            </button>
+            <button type="button" id="delete-device" class="btn btn-danger btn-sm" (click)="DeleteModel(model._id)">
+              <i class="bi bi-trash"></i>
+            </button>
+            <button type="button" id="clone-device" class="btn btn-info btn-sm" (click)="CloneModel(model._id)">
+              <i class="bi bi-copy"></i>
+            </button>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="btn-group me-3 mb-3" role="group" aria-label="model-operations">
+    <button
+      type="button"
+      class="btn btn-success btn-sm move-right mb-3"
+      data-bs-toggle="button"
+      autocomplete="off"
+      aria-pressed="true"
+      (click)="AddModel()">
       <i class="bi bi-plus-lg"></i> Add
     </button>
   </div>
-  <pagination-controls (pageChange)="modelListPage = $event" id="modelListPagination"></pagination-controls>
+  <div class="me-3 gap-3 mb-3">
+    <pagination-controls (pageChange)="modelListPage = $event" id="modelListPagination"></pagination-controls>
+  </div>
 </div>
 <app-log [component]="component"></app-log>
